MDEV-8233: InnoDB: Assertion failure in fil_page_decompress with encrypted tables

Analysis: Problem was that used compression method needs to be stored
to the page.

Fixed by storing compression method after key_version to the page.